# learn-qt

./: LICENSE
doc/: qt6.9.1.txt
src/: .gitignore
src/GlTriangle/: CMakeLists.txt  gl_triangle_window.cpp  gl_triangle_window.h  main.cpp
src/PcmPlayer/: CMakeLists.txt
src/PcmPlayer/res/: PcmPlayer_en_US.ts  PcmPlayer_zh_CN.ts
src/PcmPlayer/src/: main.cpp
src/VkInfo/: CMakeLists.txt  main.cpp
src/VkTriangle/: CMakeLists.txt  ReadMe.md  main.cpp  triangle_renderer.cpp  triangle_renderer.h  vk_triangle_window.cpp  vk_triangle_window.h
src/VkTriangle/res/: compile_shaders.cmd  compile_shaders.sh
